--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -12,4 +12,5 @@
     <string name="settings">Settings</string>
     <string name="settings_battery_restrict">Don\'t download when battery level is low</string>
     <string name="settings_idle_restrict">Don\'t download when device is active</string>
+    <string name="empty_list_info">For loading images need permission for writing in the device storage</string>
 </resources>
